# Server-Dashboard

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  run_granian.py
app/: __init__.py  app.py  db.py  dockerfile.backend  pyproject.toml  requirements.txt  routes.py  web.py
app/config/: config.py
app/mapping/: __init__.py  metric_mapper.py
app/models/: alert.py  metric.py  server.py
app/patterns/: __init__.py  metrics.py  singleton.py
app/repositories/: __init__.py  alerts_repo.py  metrics_repo.py  servers_repo.py
app/resources/: __init__.py  dashboard_resource.py  metrics_resource.py
app/services/: alert_services.py  dashboard_service.py  metric_services.py  server_services.py
app/src/: app.py  db.py  main.py  routes.py
app/src/config/: config.py
app/static/css/: dashboard.css
app/static/js/: dashboard.js
app/templates/: dashboard.html
app/test/: test_app.py  test_metric.py  test_server.py
app/tests/: test_app.py  test_metric.py  test_server.py
app/utils/: serialization.py  validation.py
docker/: .env.example  docker-compose.yml
mongo/: docker-compose.yml
mongo/data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-5696353502744397647.wt  collection-2--675052088773880287.wt  collection-2-5696353502744397647.wt  collection-4-5696353502744397647.wt  collection-7-5696353502744397647.wt  sizeStorer.wt  (+7 more)
test/: conftest.py  test_alert_model.py  test_alert_service.py  test_app.py  test_app_metrics_endpoint.py  test_app_metrics_get_endpoint.py  test_dashboard_summary.py  test_invalid_ids.py  test_metric.py  test_metric_crud.py  test_metric_model.py  test_metric_service.py  test_metric_validation.py  test_server.py  test_server_model.py  test_server_service.py
(+10 files in other folders)
