[project]
name = "server-dashboard"
version = "0.1.0"
description = "Backend para el monitoreo de servidores"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.1",
    "python-dotenv==1.1.1",
    "pymongo==4.14.0",
    "asgiref==3.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "uvicorn==0.30.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
