[project]
name = "server-dashboard"
version = "0.1.0"
description = "Backend para el monitoreo de servidores"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "python-dotenv==1.0.1",
    "pymongo==4.8.0",
    "gunicorn==22.0.0",
    "PyJWT==2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
